--- a/style.css
+++ b/style.css
@@ -19,6 +19,47 @@ canvas {
   clear: both;
 }
 
+.splash{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 200;
+  color: white;
+  text-align: center;
+  line-height: 90vh;
+  background-color: #ffffff; /* fallback color */
+  background-image: url('https://raw.githubusercontent.com/LeanderWissert/leanderwissert.github.io/main/opera_JCmkhyALJX.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.splash.display-none{
+  position: fixed;
+  opacity: 0;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  color: black;
+  text-align: center;
+  line-height: 90vh;
+  transition: all 0.5s;
+}
+
+@keyframes fadeIn{
+  to{
+    opacity: 1;
+  }
+}
+
+.fade-in{
+  opacity: 0;
+  animation: fadeIn 1s ease-in forwards;
+}
+
 /*
 .button {
   background-color: rgb(0, 255, 255); 
