--- a/style.css
+++ b/style.css
@@ -26,13 +26,14 @@ canvas {
   width: 100%;
   height: 100vh;
   z-index: 200;
-  color: white;
+  color: rgb(0, 255, 255);
   text-align: center;
   line-height: 90vh;
   background-color: #ffffff; /* fallback color */
-  background-image: url('https://raw.githubusercontent.com/LeanderWissert/leanderwissert.github.io/main/opera_JCmkhyALJX.jpg');
+  background-image:  url('https://raw.githubusercontent.com/LeanderWissert/leanderwissert.github.io/main/opera_JCmkhyALJX.jpg');
   background-repeat: no-repeat;
   background-size: cover;
+  font-family: monospace;
 }
 
 .splash.display-none{
@@ -46,18 +47,18 @@ canvas {
   color: black;
   text-align: center;
   line-height: 90vh;
-  transition: all 0.5s;
+  transition: all 1s;
 }
 
 @keyframes fadeIn{
   to{
-    opacity: 1;
+    opacity: 9;
   }
 }
 
 .fade-in{
   opacity: 0;
-  animation: fadeIn 1s ease-in forwards;
+  animation: fadeIn 0.75s ease-in forwards;
 }
 
 /*
