--- a/style.css
+++ b/style.css
@@ -5,13 +5,18 @@ html, body {
 body {
   font-family: monospace;
 }
+.button {
+  font-family: monospace;
+  color:rgb(0, 0, 0);
+}
 ::placeholder {
   font-family: monospace;
 }
-.button {
+input[type="button"] {
   font-family: monospace;
+  color:rgb(0, 0, 0);
+  background-color: rgb(0, 255, 255); 
 }
-
 
 canvas {
   display: block;
