--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ html, body {
 }
 body {
   font-family: monospace;
+  background-color: #1a1a1a;
+  color: #f0f0f0;
 }
 .button {
   font-family: monospace;
@@ -11,22 +13,24 @@ body {
 }
 ::placeholder {
   font-family: monospace;
+  background-color: aqua;
+  color: #000000;
 }
 input[type="button"] {
   font-family: monospace;
   color:rgb(0, 0, 0);
-  background-color: rgb(0, 255, 255); 
+  background-color: aqua;
 }
-
 canvas {
   display: block;
 }
-
+h1, h2, h3, h4, h5, h6 {
+  color: #f0f0f0;
+}
 .column {
   float: left;
   width: 20%;
 }
-
 /* Clear floats after the columns */
 .row:after {
   content: "";
