--- a/style.css
+++ b/style.css
@@ -21,13 +21,10 @@ input[type="button"] {
   color:rgb(0, 0, 0);
   background-color: aqua;
 }
-.text {
-  color: #000000;
-}
 canvas {
   display: block;
 }
-h1, h2, h3, h4, h5, h6 {
+h2, h3, h4, h5, h6 {
   color: #f0f0f0;
 }
 .column {
@@ -51,7 +48,7 @@ h1, h2, h3, h4, h5, h6 {
   color: rgb(0, 255, 255);
   text-align: center;
   line-height: 90vh;
-  background-color: #ffffff; /* fallback color */
+  background-color:aqua; /* fallback color */
   background-image:  url('https://raw.githubusercontent.com/LeanderWissert/leanderwissert.github.io/main/opera_JCmkhyALJX.jpg');
   background-repeat: no-repeat;
   background-size: cover;
