--- a/style.css
+++ b/style.css
@@ -29,8 +29,27 @@ canvas {
   display: table;
   clear: both;
 }
-
-
+.scroll-bottom {
+  position: absolute;
+  bottom: 0;
+  display: none;
+  width: 100%;
+  background-color: #f0f0f0;
+  padding: 10px;
+  text-align: center;
+}
+.scroll-ancestor {
+  position: relative;
+  height: 100%; /* create a new positioning context */
+}
+.fixed-bottom {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background-color: #f0f0f0;
+  padding: 10px;
+  text-align: center;
+}
 .splash{
   position: fixed;
   top: 0;
@@ -47,7 +66,6 @@ canvas {
   background-size: cover;
   font-family: sans-serif;
 }
-
 .splash.display-none{
   position: fixed;
   opacity: 0;
